fix gap above input for wide crosswords

--- a/crossword-styles.css
+++ b/crossword-styles.css
@@ -84,6 +84,7 @@ body {
   background: transparent;
   font-size: 20px;
   text-transform: uppercase;
+  vertical-align: top;
 }
 .cell.highlight,
 li.highlight {
